* artists list details alignment fixed
Former-commit-id: 27d31ae8003ba36ff1e425a1ab92716dd35d5c0b
Former-commit-id: 39fa8d36d8961e8a551d31c00bb94240090e3809

--- a/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
+++ b/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
@@ -177,6 +177,7 @@ img {
 
 .artists-list .list-group .list-group-item h3 {
     font-weight: bold;
+    margin-top: -38px;
     font-variant: small-caps;
 }
 
